# czchen-application-templates

./: .editorconfig  README.md
rest/axum-template/: Cargo.toml  Makefile
rest/axum-template/db-tmp/: Cargo.toml
rest/axum-template/db-tmp/src/: main.rs
rest/axum-template/server/: Cargo.toml
rest/axum-template/server/conf/: config.yml
rest/axum-template/server/src/: main.rs  schema.rs
rest/axum-template/server/src/handlers/: info.rs
rest/axum-template/src/: main.rs
rest/connexion-template/: Makefile  pyproject.toml  pytest.ini  tox.ini
rest/connexion-template/app/: __init__.py
rest/connexion-template/app/handlers/: __init__.py  info.py  records.py
rest/connexion-template/conf/: config.yaml
rest/connexion-template/openapi/: info.yml  records.yml  status-code.yml
rest/connexion-template/tests/: conftest.py
rest/connexion-template/tests/info/: test_read_info.py
rest/connexion-template/tests/records/: test_get_records.py  test_read_records.py
rest/flask/: Makefile  pyproject.toml  tox.ini
rest/flask-template/app/handlers/: records.py
rest/flask-template/scripts/: setup-tmp-db.py
rest/flask/app/handlers/: info.py  records.py
rest/flask/app/storages/: __init__.py
rest/flask/conf/: .gitignore  config.yaml
rest/flask/migrations/versions/: 2023-08-14_ca45bf14c52b_add_records.py
rest/flask/openapi/: info.yml  main.yml
rest/flask/scripts/: setup-tmp-db.py
rest/flask/tests/: conftest.py
rest/flask/tests/records/: test_get_records.py
rest/flask/utils/: __init__.py
