[tool.poetry]
name = "flask-template"
version = "0.0.0"
description = "Flask REST API template"
authors = ["ChangZhuo Chen (陳昌倬) <czchen@czchen.org>"]
license = "MIT"

[tool.poetry.dependencies]
connexion = {version = "^2.14.2", extras = ["swagger-ui"]}
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.5"
hydra-core = "^1.3.2"
openapi-spec-validator = "^0.6.0"
opentelemetry-instrumentation-flask = "^0.40b0"
prance = "^23.6.21.0"
python = "^3.11"
python-json-logger = "^2.0.7"
testcontainers = {extras = ["postgresql"], version = "^3.7.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
testcontainers = {version = "^3.7.0", extras = ["postgresql"]}
tox = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
