[package]
name = "axum-template"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.3.21", features = ["derive"] }
config = { version = "0.13.3", features = ["yaml"] }
diesel = "2.1.0"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.8"
utoipa = "3.4.4"
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
